# internal/domain/user/model.go
@@ -1,1 +1,9 @@
 package user
+
+type CreateUserRequest struct {
+	TenantID string
+	Email    string
+	Phone    string
+	Password string
+	IsActive bool
+}
