# internal/shared/model/jwt.go
@@ -3,6 +3,15 @@ package model
 import "github.com/golang-jwt/jwt/v5"
 
 type Claims struct {
-	UserID string `json:"sub"`
+	UserID   string `json:"sub"`
+	Email    string `json:"email"`
+	TenantID string `json:"tenant_id"`
 	jwt.RegisteredClaims
+}
+
+type JWTData struct {
+	UserID   string
+	Email    string
+	TenantID string
+	TokenID  string
 }
